--- a/client/app/app.css
+++ b/client/app/app.css
@@ -49,6 +49,7 @@
 @import 'manageStudents/manageStudents.css';
 @import 'problems/problems.css';
 @import 'statstic/statstic.css';
+@import 'teacher/teacher.css';
 @import '../components/footer/footer.css';
 @import '../components/modal/modal.css';
 @import '../components/oauth-buttons/oauth-buttons.css';
@@ -86,3 +87,4 @@
   height: 200px;
   /*background-color: red;*/
 }
+
