--- a/client/components/footer/footer.css
+++ b/client/components/footer/footer.css
@@ -1,6 +1,12 @@
 footer.footer {
-  text-align: center;
-  padding: 30px 0;
-  margin-top: 70px;
-  border-top: 1px solid #E5E5E5;
+	text-align: center;
+	padding: 30px 0;
+	margin-top: 70px;
+	border-top: 1px solid #E5E5E5;
+}
+
+footer {
+	position: absolute;
+	bottom: 0px;
+	height: 80px;
 }
