--- a/client/app/app.css
+++ b/client/app/app.css
@@ -47,6 +47,7 @@
 @import 'admin/admin.css';
 @import 'main/main.css';
 @import 'manageStudents/manageStudents.css';
+@import 'problemCreation/problemCreation.css';
 @import 'problems/problems.css';
 @import 'statstic/statstic.css';
 @import 'teacher/teacher.css';
