--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -39,7 +39,7 @@
  -->
 
 <div id="main-header">
- <nav class="navbar navbar-default navbar-fixed-top"  style="height: 6.5vh">
+ <nav class="navbar navbar-default navbar-fixed-top">
    <div class="container">
      <div class="navbar-header">
        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
