--- a/client/components/oauth-buttons/oauth-buttons.html
+++ b/client/components/oauth-buttons/oauth-buttons.html
@@ -7,3 +7,8 @@
   Connect with Google+
 </a>
 
+<a ng-class="classes" ng-click="OauthButtons.loginOauth('google')" class="btn btn-social btn-dropbox">
+  <i class="fa fa-facebook"></i>
+  Connect with Facebook
+</a>
+
