--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,43 +1,3 @@
-<!-- <div class="navbar navbar-inverse navbar-static-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button class="navbar-toggle" type="button" ng-click="$ctrl.isCollapsed = !$ctrl.isCollapsed">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="/" class="navbar-brand">CS-Helper</a>
-    </div>
-    <div uib-collapse="$ctrl.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
-      <ul class="nav navbar-nav">
-        <li ng-repeat="item in $ctrl.menu" ui-sref-active="active">
-            <a ui-sref="{{item.state}}">{{item.title}}</a>
-        </li>
-        <li ng-show="$ctrl.isAdmin()" ui-sref-active="active"><a ui-sref="admin">Admin</a></li>
-        <li ng-show="$ctrl.isAdmin()" ui-sref-active="active"><a ui-sref="manageStudents">Manage Students</a></li>
-        <li ng-show="$ctrl.isAdmin()" ui-sref-active="active"><a ui-sref="statstic">Statistic</a></li>
-      </ul>
-
-      <ul class="nav navbar-nav navbar-right">
-        <li ng-hide="$ctrl.isLoggedIn()" ui-sref-active="active"><a ui-sref="signup">Sign up</a></li>
-        <li ng-hide="$ctrl.isLoggedIn()" ui-sref-active="active"><a ui-sref="login">Login</a></li>
-        <li class="dropdown">
-          <a ng-show="$ctrl.isLoggedIn()" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello {{ $ctrl.getCurrentUser().name }} <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a ui-sref="problems.all">All Problem</a></li>
-            <li><a ui-sref="problems.add">New Problem</a></li>
-            <li class="divider"></li>
-            <li><a ui-sref="settings">Change Password</a></li>
-            <li><a ui-sref="logout">Logout</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
- -->
-
 <div id="main-header">
  <nav class="navbar navbar-default navbar-fixed-top">
    <div class="container">
@@ -47,7 +7,7 @@
          <span class="icon-bar"></span>
          <span class="icon-bar"></span>
        </button>
-       <a class="navbar-brand" href="#">CS<span class="logo-dec">Helper</span></a>
+       <a class="navbar-brand" ui-sref="main">CS<span class="logo-dec">Helper</span></a>
      </div>
      <div class="collapse navbar-collapse" id="myNavbar">
        <ul class="nav navbar-nav navbar-right">
@@ -57,12 +17,12 @@
          <li ng-show="$ctrl.$state.current.name == 'main'"><a href="#testimonial">Student</a></li>
          <li ng-show="$ctrl.$state.current.name == 'main'"><a href="#contact">Contact Us</a></li>
 
-         <li ng-show="$ctrl.isTutor() || $ctrl.isAdmin()" ui-sref-active="active"><a ui-sref="teacher">Teacher</a></li>
+         <li ng-show="$ctrl.isLoggedIn()" ui-sref-active="active"><a ui-sref="teacher">Dashboard</a></li>
          <li class="dropdown">
            <a ng-show="$ctrl.isLoggedIn()" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello {{ $ctrl.getCurrentUser().name }} <span class="caret"></span></a>
            <ul class="dropdown-menu">
              <li><a ui-sref="problems.all">All Problem</a></li>
-             <li><a ui-sref="problems.add">New Problem</a></li>
+             <li><a ui-sref="problems.add" ng-show="$ctrl.isTutor() || $ctrl.isAdmin()">New Problem</a></li>
              <li class="divider"></li>
              <li><a ui-sref="settings">Change Password</a></li>
              <li><a ui-sref="logout">Logout</a></li>
