removed social net login for now, fixed compiler on production,added deploy script, add markdown look for description

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -13,8 +13,8 @@
        <ul class="nav navbar-nav navbar-right">
          <li ng-show="$ctrl.$state.current.name == 'main'"><a href="index.html">Home</a></li>
          <li ng-show="$ctrl.$state.current.name == 'main'"><a href="#feature">About</a></li>
-         <li ng-show="$ctrl.$state.current.name == 'main'"><a href="#portfolio">Tutor</a></li>
-         <li ng-show="$ctrl.$state.current.name == 'main'"><a href="#testimonial">Student</a></li>
+         <!-- <li ng-show="$ctrl.$state.current.name == 'main'"><a href="#portfolio">Tutor</a></li> -->
+         <!-- <li ng-show="$ctrl.$state.current.name == 'main'"><a href="#testimonial">Student</a></li> -->
          <li ng-show="$ctrl.$state.current.name == 'main'"><a href="#contact">Contact Us</a></li>
 
          <li ng-show="$ctrl.isLoggedIn()" ui-sref-active="active"><a ui-sref="teacher">Dashboard</a></li>
