--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -89,7 +89,8 @@ h1, h2, h3, h4, h5, h6{
 HEADER 
 ************************************
 ***********************************/
-.header{
+.main-header{
+    background: url('../../assets/images/background.jpg') no-repeat fixed;
     background-size: cover;
     min-height: 650px;
     position: relative;
