--- a/client/components/oauth-buttons/oauth-buttons.html
+++ b/client/components/oauth-buttons/oauth-buttons.html
@@ -3,8 +3,9 @@
   Connect with Google+
 </a>
  -->
-<a ng-class="classes" ng-click="OauthButtons.loginOauth('facebook')" class="btn btn-social btn-dropbox">
+<!-- <a ng-class="classes" ng-click="OauthButtons.loginOauth('facebook')" class="btn btn-social btn-dropbox">
   <i class="fa fa-facebook"></i>
   Connect with Facebook
 </a>
 
+ -->
